safari centralize safari nonsense - window wheel listener into util class move translate of top from css to webgl - fixes jumpyness in safari add render call on minimap resize - fixes safari flickering pass stage dimensions as numbers (not object - to simplify dirty check) set viewport top outside of useEffect to avoid circular rendering start merging CanvasAlignmentComponent into minimaphook

--- a/src/components/alignment-details/AlignmentDetails.scss
+++ b/src/components/alignment-details/AlignmentDetails.scss
@@ -10,6 +10,7 @@
   right: 0;
 
   canvas.stage {
+    position: relative;
     image-rendering: optimizeSpeed;
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
